[package]
name = "wallpapers"
version = "0.1.0"
edition = "2024"
description = "Awused's personal image and manga viewer"
readme = "README.md"
license = "MIT"
keywords = ["wallpapers", "waifu2x"]
homepage = "https://github.com/awused/wallpapers"
repository = "https://github.com/awused/wallpapers"
links = "X11, Xrandr"


[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
aw-shuffle = { git = "https://github.com/awused/aw-shuffle", features = [ "rocks" ] }
aw-upscale = { git = "https://github.com/awused/aw-upscale" }
clap = { version = "4.5.30", features = ["derive"] }
crossbeam-utils = "0.8.21"
dialoguer = { version = "0.11.0", default-features = false, features = [ "history" ] }
image = { version = "0.25.5", default-features = false, features = [ "jpeg", "png", "bmp" ] }
lru = { version = "0.13.0", default-features = false }
num_cpus = "1.16.0"
ocl = { version = "0.19.7", optional = true }
once_cell = "1.20.3"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.218", default-features = false, features = [ "derive" ] }
signal-hook = { version = "0.3.17", default-features = false }
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = [ "macros", "process", "rt", "sync", "time" ] }
toml = "0.8.20"
walkdir = "2.5.0"


[target.'cfg(unix)'.dependencies]
libc = "0.2.169"
futures = "0.3.31"
tikv-jemallocator = { version = "0.6.0", features = [ "background_threads" ] }
x11 = "2.21.0"

[target.'cfg(windows)'.dependencies]
widestring = "1.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell"
]

[features]
default = ["opencl"]
windows-quiet = []
opencl = ["dep:ocl"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
overflow-checks = false
